# gaia

./: .gitignore  README.md  pyproject.toml
scripts/: .env  chatbot.py  rag_app.py  rag_module.py
